--- a/src/components/menus/basket-product-item/index.html
+++ b/src/components/menus/basket-product-item/index.html
@@ -1,6 +1,6 @@
 <li class="bpc-product-list-item">
   <div class="bpc-product-check-image">
-    <input type="checkbox">
+    <input type="checkbox" class="input_ input_primary">
     <div class="bpc-product-image">
       <img src="/images/product-1.jpeg" alt="">
     </div>
