--- a/src/components/menus/left-filters/check-search/index.html
+++ b/src/components/menus/left-filters/check-search/index.html
@@ -6,19 +6,19 @@
   <ul class="cpf-filter-item-lists">
     <li class="cpffi-item">
       <div class="check_input_">
-        <input id="checkbox-item-1" type="checkbox" value="">
+        <input id="checkbox-item-1" class="input_ input_primary" type="checkbox" value="">
         <label for="checkbox-item-1" class="">Marka 1</label>
       </div>
     </li>
     <li class="cpffi-item">
       <div class="check_input_">
-        <input id="checkbox-item-2" type="checkbox" value="">
+        <input id="checkbox-item-2"  class="input_ input_primary" type="checkbox" value="">
         <label for="checkbox-item-2" class="">Marka 2</label>
       </div>
     </li>
     <li class="cpffi-item">
       <div class="check_input_">
-        <input id="checkbox-item-3" type="checkbox" value="">
+        <input id="checkbox-item-3" class="input_ input_primary" type="checkbox" value="">
         <label for="checkbox-item-3" class="">Marka 3</label>
       </div>
     </li>
