--- a/src/components/menus/left-filters/price-range/index.html
+++ b/src/components/menus/left-filters/price-range/index.html
@@ -10,19 +10,19 @@
   <ul class="cpf-filter-item-lists mt-2">
     <li class="cpffi-item">
       <div class="check_input_">
-        <input id="checkbox-item-12" type="radio" name="price" value="1">
+        <input id="checkbox-item-12" type="radio" class="input_ input_primary" name="price" value="1">
         <label for="checkbox-item-12" class="">0 - 1000 TL</label>
       </div>
     </li>
     <li class="cpffi-item">
       <div class="check_input_">
-        <input id="checkbox-item-23" type="radio" name="price" value="2">
+        <input id="checkbox-item-23" type="radio" class="input_ input_primary" name="price" value="2">
         <label for="checkbox-item-23" class="">1000 - 2000 TL</label>
       </div>
     </li>
     <li class="cpffi-item">
       <div class="check_input_">
-        <input id="checkbox-item-34" type="radio" name="price" value="3">
+        <input id="checkbox-item-34" type="radio" class="input_ input_primary" name="price" value="3">
         <label for="checkbox-item-34" class="">2000 - 5000 TL</label>
       </div>
     </li>
