sayfalar mobil sayfalara göre ayarlandı.

--- a/src/components/menus/shop-cart-list/index.html
+++ b/src/components/menus/shop-cart-list/index.html
@@ -1,4 +1,4 @@
-<a class="mscl-item" href="#">
+<a class="mscl-item" href="/pages/category.html">
     <img alt="" src="/images/category-2.jpeg">
     <div class="mscl-item-text">
         <p>Menü</p>
