--- a/src/components/menus/shop-product-cart-2/index.html
+++ b/src/components/menus/shop-product-cart-2/index.html
@@ -20,6 +20,6 @@
     </div>
     <div class="prc-price">
         <span>199,99 TL</span>
-        <button class="btn_ btn_primary">Sepete Ekle</button>
+        <button class="btn_ btn_full btn_primary">Sepete Ekle</button>
     </div>
 </a>
