--- a/src/components/orders/orders-item.html
+++ b/src/components/orders/orders-item.html
@@ -4,18 +4,16 @@
       <img alt=""
            src="/images/product-1.jpeg">
     </div>
-    <div class="flex flex-col gap-1 flex-1 text-xs">
-
-      <a href="/pages/product.html" class="text-gray-500 hover:underline">Ürün Adı</a>
-      <div class="text-emerald-500 flex items-center gap-1">
-        <span class="w-4 h-4">@@include('../../assets/icons/tick.svg')</span>
-        Teslim Edildi
+    <div class="opli-pi-product">
+      <a href="/pages/product.html" class="opli-pip-title">Ürün Ad wofnwoı fjwıofjw ıofjewı</a>
+      <div class="opli-pip-alt">
+        <div class="flex line-clamp-1"> <span class="w-4 h-4 block">@@include('../../assets/icons/tick.svg')</span> Teslim Edildi</div>
         <span class="text-gray-500 pl-1 text-xxs">7 Ekim Cts, 13:19</span>
       </div>
     </div>
   </div>
-  <div class="opli-pi-price">
-    <span class="text-lg font-semibold text-primary-500">329,99 TL</span>
-    <span class="text-s text-gray-500">Kredi Kartı</span>
+  <div class="opli-pi-price flex-shrink-0">
+    <span class="md:text-lg text-sm  font-semibold text-primary-500">329,99 TL</span>
+    <span class="text-xs md:text-s text-gray-500">Kredi Kartı</span>
   </div>
 </li>
