--- a/src/components/orders/orders.html
+++ b/src/components/orders/orders.html
@@ -4,11 +4,11 @@
             <span>Sipariş Tarihi</span>
             <b>9 Mayıs 2022 - 15:18</b>
         </div>
-        <div class="oplh-item">
+        <div class="oplh-item oplh-i-hd">
             <span>Sipariş Özeti</span>
             <b>2 Teslimat, 2 Ürün</b>
         </div>
-        <div class="oplh-item">
+        <div class="oplh-item oplh-i-hd ">
             <span>Alıcı</span>
             <b>Üye Adı</b>
         </div>
@@ -16,7 +16,7 @@
             <span>Tutar</span>
             <b class="!text-primary-500">213.99 TL</b>
         </div>
-        <button class="btn_ btn_full btn_primary btn_sm">Sipariş Detayı</button>
+        <button class="btn_ btn_full btn_primary btn_sm ">Detaylar</button>
     </div>
     <div class="opl-item-main">
         <ul class="opli-product-lists">
