--- a/src/components/menus/basket-product-item/index.html
+++ b/src/components/menus/basket-product-item/index.html
@@ -7,15 +7,15 @@
   </div>
   <div class="bpc-product-infos">
       <div class="flex flex-col">
-        <h1 class="text-xl font-medium">Ürün adı</h1>
-        <p class="text-sm text-gray-500">ürün açıklaması</p>
+        <h1 class="text-sm md:text-xl font-medium line-clamp-2">Ürün adı</h1>
+        <p class="text-xs md:text-sm text-gray-500 line-clamp-2">ürün açıklaması</p>
       </div>
     <div class="w-full flex items-end justify-between">
       <div class="flex gap-2">
         <input type="number" value="1" placeholder="adet" class="input_ input_xs !w-16">
         <button class="btn_ btn_xs btn_primary btn_icon"><i class="gg-trash-empty" style="--ggs: .7;"></i></button>
       </div>
-      <span class="font-medium text-lg">323,99 TL</span>
+      <span class="font-medium text-sm md:text-lg">323,99 TL</span>
     </div>
   </div>
 </li>
