--- a/tailwind.css
+++ b/tailwind.css
@@ -1023,6 +1023,19 @@ header .h-menus .h-menu-item:hover .hm-hover-menu {
 .product-page .pp-info-content {
   @apply grid grid-cols-1 md:grid-cols-2 gap-4 md:gap-0;
 }
+.product-page .pp-info-content .ppi-images {
+  @apply relative;
+}
+.product-page .pp-info-content .ppi-images .zoom-selector {
+  cursor: crosshair;
+  @apply absolute w-16 h-16 rounded-lg bg-black/20 z-10;
+}
+.product-page .pp-info-content .ppi-images .ppi-zoom-image {
+  @apply absolute top-0 left-full max-w-[400px] w-full z-50 ml-3 rounded-xl bg-white border border-gray-100 border-solid overflow-hidden;
+}
+.product-page .pp-info-content .ppi-images .ppi-zoom-image img {
+  @apply h-[350px] md:h-[500px] w-full object-contain absolute top-0 left-0 z-50 max-w-none;
+}
 .product-page .pp-info-content .ppi-images [data-swiper-small-thumbs] {
   @apply hidden md:block;
 }
@@ -1199,29 +1212,5 @@ footer .f-content .fc-wrapper .fcw-item img {
 .slide-left ~ .slider-overlay {
   background-color: rgba(0, 0, 0, 0.5);
   visibility: visible;
-}
-.zoom-box {
-  position: relative;
-}
-.zoom-box img {
-  vertical-align: bottom;
-}
-.zoom-box .zoom-selector {
-  position: absolute;
-  background-image: url("/images/selector.png");
-  background-repeat: repeat;
-  display: none;
-  cursor: crosshair;
-}
-.zoom-box .viewer-box {
-  position: absolute;
-  border: 1px solid #efedf0;
-  display: none;
-  overflow: hidden;
-}
-.zoom-box .viewer-box > img {
-  position: absolute;
-  left: 0;
-  top: 0;
 }
 /*# sourceMappingURL=tailwind.css.map */
