checkout sayfası eklendi

--- a/src/components/orders/orders-item.html
+++ b/src/components/orders/orders-item.html
@@ -5,7 +5,7 @@
            src="/images/product-1.jpeg">
     </div>
     <div class="opli-pi-product">
-      <a href="/pages/product.html" class="opli-pip-title">Ürün Ad wofnwoı fjwıofjw ıofjewı</a>
+      <a href="/pages/product.html" class="opli-pip-title">Ürün Adı</a>
       <div class="opli-pip-alt">
         <div class="flex line-clamp-1"> <span class="w-4 h-4 block">@@include('../../assets/icons/tick.svg')</span> Teslim Edildi</div>
         <span class="text-gray-500 pl-1 text-xxs">7 Ekim Cts, 13:19</span>
