--- a/tailwind.css
+++ b/tailwind.css
@@ -459,6 +459,21 @@ video {
   box-shadow: none;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E %3Cpath d='M15.88 8.29L10 14.17l-1.88-1.88a.996.996 0 1 0-1.41 1.41l2.59 2.59c.39.39 1.02.39 1.41 0L17.3 9.7a.996.996 0 0 0 0-1.41c-.39-.39-1.03-.39-1.42 0z' fill='%23fff'/%3E %3C/svg%3E");
 }
+.textarea_ {
+  --input-background: theme("colors.gray.50");
+  --input-color: theme("colors.gray.900");
+  --input-border-color: theme("colors.gray.300");
+  background-color: var(--input-background);
+  color: var(--input-color);
+  border-color: var(--input-border-color);
+  @apply border w-full text-sm rounded-lg resize-none focus-visible:outline-primary-500 focus:ring-primary-500 focus:border-primary-500 block p-2.5;
+}
+.textarea_.textarea_sm {
+  @apply px-3 py-2 text-s;
+}
+.textarea_.textarea_xs {
+  @apply px-2 py-1 text-xs rounded-lg;
+}
 .check_input_ {
   @apply flex items-center px-2 cursor-pointer rounded hover:bg-gray-100 dark:hover:bg-gray-600;
 }
@@ -1115,6 +1130,109 @@ header .h-menus .h-menu-item:hover .hm-hover-menu {
 }
 .product-page .pp-info-content .ppi-infos .ppi-basket-favorite .ppi-bf-piece button {
   @apply w-6;
+}
+.checkout-page {
+  @apply flex md:flex-row flex-col relative;
+}
+.checkout-page .cp-overlay {
+  @apply hidden;
+}
+@media (max-width: 768px) {
+  .checkout-page.cp_mobile_box .cpm_cat_icon {
+    @apply !rotate-0;
+  }
+  .checkout-page.cp_mobile_box .cp-delivery {
+    @apply !hidden;
+  }
+}
+@media (max-width: 768px) {
+  .checkout-page.cp_mobile_box .cp-order-summary {
+    @apply !opacity-100 !bottom-0 z-20 !flex;
+  }
+}
+.checkout-page.cp_mobile_box .cp-overlay {
+  @apply fixed top-0 left-0 bg-black/50 w-full h-full block z-10 md:hidden;
+}
+.checkout-page .cp-delivery {
+  @apply flex-1 pb-24 md:pb-0 md:h-screen flex flex-col justify-center items-center overflow-auto;
+}
+.checkout-page .cp-delivery .cpd-content {
+  @apply max-w-2xl mx-auto px-3;
+}
+.checkout-page .cp-delivery .cpd-logo {
+  @apply w-full;
+}
+.checkout-page .cp-delivery .cpd-form {
+  @apply w-full;
+}
+.checkout-page .cp-delivery .cpd-title {
+  @apply text-gray-700 font-medium mb-2;
+}
+.checkout-page .cp-mobile-summary {
+  @apply fixed bottom-0 left-0 h-20 w-full bg-white border-t border-solid border-gray-100 z-50 md:hidden;
+}
+.checkout-page .cp-mobile-summary .cpm_c_approve {
+  @apply flex items-center gap-3 h-20 px-3 relative z-10;
+}
+.checkout-page .cp-mobile-summary .cpm_c_approve .cpm_ca_total {
+  @apply flex items-center gap-1 md:hidden text-sm w-full;
+}
+.checkout-page .cp-mobile-summary .cpm_c_approve .cpm_ca_total .cpm_cat_icon {
+  @apply rotate-180;
+}
+.checkout-page .cp-order-summary {
+  @apply w-full md:w-[300px] lg:w-[350px] bg-gray-50 sticky md:top-0   flex-col h-screen hidden md:flex pb-20 md:pb-0 opacity-0 md:opacity-100 transition transition-all;
+}
+.checkout-page .cp-order-summary .cp-os-total {
+  @apply py-2 md:py-5 text-center flex  flex-col md:gap-3 border-b border-gray-200 border-solid w-full;
+}
+.checkout-page .cp-order-summary .cp-os-total h3 {
+  @apply font-medium md:text-lg text-gray-600;
+}
+.checkout-page .cp-order-summary .cp-os-total h1 {
+  @apply text-xl md:text-4xl font-bold text-emerald-500;
+}
+.checkout-page .cp-order-summary .cp-os-total span {
+  @apply text-s text-gray-500 hidden md:block;
+}
+.checkout-page .cp-order-summary .cp-os-summary {
+  @apply py-2 md:py-5 flex flex-col flex-1 overflow-auto;
+}
+.checkout-page .cp-order-summary .cp-os-summary .cp-oss-title {
+  @apply text-m text-gray-600 font-medium mb-2 px-3;
+}
+.checkout-page .cp-order-summary .cp-os-summary .cp-oss-product {
+  @apply flex flex-col gap-1 mt-1 px-3;
+}
+.checkout-page .cp-order-summary .cp-os-summary .cp-oss-product.cp-oss-list {
+  @apply mt-0 flex-1 overflow-auto;
+}
+.checkout-page .cp-order-summary .cp-os-summary .cp-oss-product.cp-oss-list .cp-oss-left span {
+  @apply !text-xs;
+}
+.checkout-page .cp-order-summary .cp-os-summary .cp-oss-product .cp-oos-item {
+  @apply flex justify-between items-center bg-gray-100 rounded-xl px-3 py-2;
+}
+.checkout-page .cp-order-summary .cp-os-summary .cp-oss-product .cp-oos-item.cp-oss-item-total {
+  @apply bg-transparent;
+}
+.checkout-page .cp-order-summary .cp-os-summary .cp-oss-product .cp-oos-item.cp-oss-item-total .cp-oss-left span {
+  @apply font-semibold text-base text-gray-900;
+}
+.checkout-page .cp-order-summary .cp-os-summary .cp-oss-product .cp-oos-item.cp-oss-item-total .cp-oos-item-amount {
+  @apply text-gray-900 text-m;
+}
+.checkout-page .cp-order-summary .cp-os-summary .cp-oss-product .cp-oos-item .cp-oss-left {
+  @apply flex flex-col;
+}
+.checkout-page .cp-order-summary .cp-os-summary .cp-oss-product .cp-oos-item .cp-oss-left h2 {
+  @apply font-medium text-gray-900 gap-1 line-clamp-1;
+}
+.checkout-page .cp-order-summary .cp-os-summary .cp-oss-product .cp-oos-item .cp-oss-left span {
+  @apply text-sm text-gray-500 line-clamp-1;
+}
+.checkout-page .cp-order-summary .cp-os-summary .cp-oss-product .cp-oos-item .cp-oos-item-amount {
+  @apply text-s text-gray-500 font-medium;
 }
 .d-breadcrumb {
   @apply flex;
