--- a/tailwind.less
+++ b/tailwind.less
@@ -1420,3 +1420,9 @@ footer{
   background-color: rgba(0,0,0,.5);
   visibility: visible;
 }
+
+@supports (-webkit-touch-callout: none) {
+  .h-screen {
+    height: -webkit-fill-available;
+  }
+}
